<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Match.Width"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        style="@style/Match.Width"
        android:hint="@string/current_access_code"
        android:visibility="gone"
        android:id="@+id/current_access_code"
        android:inputType="numberPassword"/>

    <EditText
        style="@style/Match.Width"
        android:hint="@string/new_access_code"
        android:id="@+id/new_access_code"
        android:inputType="numberPassword"/>

    <EditText
        style="@style/Match.Width"
        android:hint="@string/repeat_new_access_code"
        android:id="@+id/repeat_access_code"
        android:inputType="numberPassword"/>

</LinearLayout>