<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Match.Vertical"
    android:background="@drawable/border_fragment"
    android:padding="1dp">

    <LinearLayout
        style="@style/Match.Horizontal"
        android:clickable="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:focusable="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/Wrap.Horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/Wrap.Small"
                android:text="@string/enable_gps" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/img_gps_state" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/Wrap.Horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/Wrap.Small"
                android:text="@string/enable_permission" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/img_permission_state"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorHintDark"/>

    <FrameLayout
        android:id="@+id/maps_fragment"
        style="@style/Match"/>

</LinearLayout>