<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Match"
    android:padding="1dp"
    android:background="@drawable/border_fragment">

    <ScrollView
        style="@style/Match">

        <LinearLayout
            style="@style/Match.Vertical">


            <TextView
                style="@style/Wrap.Small"
                android:text="@string/lock_screen"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                style="@style/Match.Width"
                android:id="@+id/btn_enable_code_access"
                android:orientation="vertical"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <RelativeLayout
                    style="@style/Match.Width"
                    android:elevation="5dp">

                    <TextView
                        style="@style/Wrap.Medium"
                        android:padding="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorBlack"
                        android:text="@string/enable_code_access"/>

                    <com.github.midros.istheapp.ui.widget.CustomCheckBox
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:clickable="false"
                        android:focusable="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:id="@+id/check_enable_code_access" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHintDark"/>

            <LinearLayout
                style="@style/Match.Width"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:id="@+id/btn_change_code_access"
                android:orientation="vertical">

                <TextView
                    style="@style/Wrap.Medium"
                    android:padding="16dp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/change_code_access"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHintDark"/>


            <LinearLayout
                style="@style/Match.Width"
                android:padding="16dp"
                android:background="@color/colorGrayTransp">

                <TextView
                    style="@style/Wrap.Medium"
                    android:text="@string/note_code_access"/>

            </LinearLayout>


            <TextView
                style="@style/Wrap.Small"
                android:text="@string/finish_application_for_inactivity"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                style="@style/Match.Width"
                android:id="@+id/btn_enable_app_finih"
                android:orientation="vertical"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground">

                <RelativeLayout
                    style="@style/Match.Width"
                    android:elevation="5dp">

                    <TextView
                        style="@style/Wrap.Medium"
                        android:padding="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorBlack"
                        android:text="@string/enable_app_finish"/>

                    <com.github.midros.istheapp.ui.widget.CustomCheckBox
                        android:layout_height="25dp"
                        android:layout_width="25dp"
                        android:clickable="false"
                        android:focusable="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:id="@+id/check_enable_app_finish" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHintDark"/>

            <LinearLayout
                style="@style/Match.Width"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:id="@+id/btn_change_time_app_finish"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/Match.Width"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Wrap.Medium"
                        android:layout_centerVertical="true"
                        android:textColor="@color/colorBlack"
                        android:text="@string/change_app_finish_time"/>
                    <TextView
                        style="@style/Wrap.Small"
                        android:id="@+id/txt_time_finish_app"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorHintDark"/>

            <LinearLayout
                style="@style/Match.Width"
                android:padding="16dp"
                android:background="@color/colorGrayTransp">

                <TextView
                    style="@style/Wrap.Medium"
                    android:text="@string/assigns_a_time_interval_to_terminate_the_application_due_to_inactivity"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>